# cppstd

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  run.py  wrapper.py
app/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  checks.h  engine.cpp  engine.h
example/: CMakeLists.txt
lib/: CMakeLists.txt  checks.h  engine.h
